<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"

    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="150dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:textAlignment="center"
            android:text="@string/reg_lbl" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_login"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pass"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:inputType="textPassword"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/confrm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_cnfrm_pass"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:inputType="textPassword"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reg"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/error"
            android:textColor="#ff0000"
            android:textSize="16dp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Уже есть аккаунт?" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="Войти" />
    </LinearLayout>

</LinearLayout>