<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repair_lbl"
                    android:textSize="10pt" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rpr_txt_lbl" />

                <EditText
                    android:id="@+id/et_discription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/d_b_lbl" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_d_begin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:layout_weight="1"
                        android:text="" />

                    <Button
                        android:id="@+id/btn_begin_cal"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@android:drawable/ic_menu_my_calendar" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/d_e_lbl" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_d_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:layout_weight="1"
                        android:text="" />

                    <Button
                        android:id="@+id/btn_end_cal"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@android:drawable/ic_menu_my_calendar" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/distr_lbl" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btn_district"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@android:drawable/ic_search_category_default" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/route_lbl" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_route"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="" />

                    <Button
                        android:id="@+id/btn_route"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@android:drawable/ic_search_category_default" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/plane_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/id_lbl" />

                    <EditText
                        android:id="@+id/et_planId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:hint="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/blockFailure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/reason_lbl" />

                    <EditText
                        android:id="@+id/et_failture_reason"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Approve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btn_approve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/appr_lbl" />

                    <Button
                        android:id="@+id/btn_failture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/fail_lbl" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/btn_save_lbl" />

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="Отменить" />

                <TextView
                    android:id="@+id/action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</LinearLayout>